--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body{margin: 0; padding: 0; background-color: #121212;}
 
 /* Index h1 (Overskrift) */
 #i_h{margin: 1%;}
+#i_h1{
+    margin-bottom: 0px;
+}
+h3{
+    margin-top: 1%;
+}
 
 /* Index p (Normal tekst) */
 .i_p{margin: 0.5%; margin-bottom: 0.25%;}
